Fix the center align of IconButton

--- a/src/ui/IconButton/index.scss
+++ b/src/ui/IconButton/index.scss
@@ -13,6 +13,7 @@
   border-radius: 4px;
   outline: 0px;
   .sendbird-iconbutton__inner {
+    height: 100%;
     svg {
       @include themed() {
         fill: t(on-bg-1);
